# lumen-et-signum

./: Cargo.toml  ESPSCRIPT.md  LICENSE  README.md
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/src/: lib.rs  protocol.rs
src/: espscript.rs  main.rs
